mocha/apps/understand-passkey/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: understand-passkey
  labels:
    app: understand-passkey
spec:
  selector:
    app: understand-passkey
  ports:
    - name: http
      port: 80
      targetPort: http
